chore: improve search request speed by passing accession and score only
